--- a/index.html
+++ b/index.html
@@ -48,17 +48,26 @@ Specl is a special-purpose assertion DSL for the expression of monitoring direct
 <h2>
 <a name="table-of-content" class="anchor" href="#table-of-content"><span class="octicon octicon-link"></span></a>Table of Content</h2>
 
-<p>1 <a href="#data-types">Data Types</a>
-    1.1 <a href="#sdo">SDO</a>
-    1.2 <a href="#array">Array</a>
-    1.3 <a href="#string">String</a>
-    1.4 <a href="#double">Number</a>
-2 <a href="#lexical_elems">Other Lexical Elements</a>
-    2.1 <a href="#comments">Comments</a>
-    2.2 <a href="#keyword">Keyword</a>
-    2.3 <a href="#operators">Operators</a></p>
+<ol>
+<li>
+<a href="#data-types">Data Types</a>
 
-<ul>
+<ol>
+<li><a href="#sdo">SDO</a></li>
+<li><a href="#array">Array</a></li>
+<li><a href="#string">String</a></li>
+<li><a href="#double">Number</a></li>
+</ol>
+</li>
+<li>
+<a href="#lexical_elems">Other Lexical Elements</a>
+
+<ol>
+<li><a href="#comments">Comments</a></li>
+<li><a href="#keyword">Keyword</a></li>
+<li><a href="#operators">Operators</a></li>
+</ol>
+</li>
 <li>
 <a href="#features">Features</a>
 
@@ -140,7 +149,7 @@ Specl is a special-purpose assertion DSL for the expression of monitoring direct
 </li>
 </ul>
 </li>
-</ul><p><a name="data_types"></a></p>
+</ol><p><a name="data_types"></a></p>
 
 <h2>
 <a name="data-types" class="anchor" href="#data-types"><span class="octicon octicon-link"></span></a>Data Types</h2>
