Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@ Specl is a special-purpose assertion DSL for the expression of monitoring direct
 <ol>
 <li>
 <a href="#data-types">Data Types</a>
-
-<ol>
-<li><a href="#sdo">SDO</a></li>
-<li><a href="#array">Array</a></li>
-<li><a href="#string">String</a></li>
-<li><a href="#double">Number</a></li>
-</ol>
+1.1. <a href="#sdo">SDO</a>
+1.2. <a href="#array">Array</a>
+1.3. <a href="#string">String</a>
+1.4. <a href="#double">Number</a>
 </li>
 <li>
 <a href="#lexical_elems">Other Lexical Elements</a>
