--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@ Specl is a special-purpose assertion DSL for the expression of monitoring direct
 <ol>
 <li>
 <a href="#data-types">Data Types</a>
-1.1. <a href="#sdo">SDO</a>
-1.2. <a href="#array">Array</a>
-1.3. <a href="#string">String</a>
-1.4. <a href="#double">Number</a>
+
+<ol>
+<li><a href="#sdo">SDO</a></li>
+<li><a href="#array">Array</a></li>
+<li><a href="#string">String</a></li>
+<li><a href="#double">Number</a></li>
+</ol>
 </li>
 <li>
 <a href="#lexical_elems">Other Lexical Elements</a>
@@ -68,18 +71,18 @@ Specl is a special-purpose assertion DSL for the expression of monitoring direct
 <li>
 <a href="#features">Features</a>
 
-<ul>
-<li><a href="#declaration">Declaration</a></li>
+<ol>
 <li>
-<a href="#assertion">Assertions</a>
+<a href="#navigation-and-query">Navigation &amp; Query</a>
 
-<ul>
+<ol>
+<li><a href="#declaration">Declaration</a></li>
+<li><a href="#assertion">Assertions</a></li>
 <li><a href="#quantified-assertion--aggregated-functions">Quantified Assertion &amp; Aggregated Functions</a></li>
 <li><a href="#numeric-expression">Numeric Expression</a></li>
-<li><a href="#navigation-and-query">Navigation &amp; Query</a></li>
-</ul>
+</ol>
 </li>
-</ul>
+</ol>
 </li>
 <li><a href="#grammar">Grammar</a></li>
 <li>
