Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,17 +70,14 @@ Specl is a special-purpose assertion DSL for the expression of monitoring direct
 </li>
 <li>
 <a href="#features">Features</a>
-
-<ol>
-<li>
-<a href="#navigation-and-query">Navigation &amp; Query</a>
+    0. <a href="#navigation-and-query">Navigation &amp; Query</a>
 
 <ol>
 <li><a href="#declaration">Declaration</a></li>
-<li><a href="#assertion">Assertions</a></li>
-<li><a href="#quantified-assertion--aggregated-functions">Quantified Assertion &amp; Aggregated Functions</a></li>
-<li><a href="#numeric-expression">Numeric Expression</a></li>
-</ol>
+<li>
+<a href="#assertion">Assertions</a>
+    1. <a href="#quantified-assertion--aggregated-functions">Quantified Assertion &amp; Aggregated Functions</a>
+    2. <a href="#numeric-expression">Numeric Expression</a>
 </li>
 </ol>
 </li>
