Repaired Img Links

--- a/soaphandler.html
+++ b/soaphandler.html
@@ -103,7 +103,7 @@
 <p>Simply save libraries in a known folder inside your project and import them.<br>
 The procedure in Eclipse IDE is</p>
 
-<img src="http://rbrunetti.github.io/Specl-Analyser/img/soap/00-ImportLibs.png" alt="Import Libs"><br><em>Import Libraries</em>
+<img src="img/soap/00-ImportLibs.png" alt="Import Libs"><br><em>Import Libraries</em>
 
 <p><a name="example_handler_server_ws"></a></p>
 
@@ -687,7 +687,7 @@ Methods are the following, the names are self-explanatory:</p>
 
 <p>Here's the directory structure of the project</p>
 
-<img src="http://rbrunetti.github.io/Specl-Analyser/img/soap/01-DirStruct.png" alt="Directory Structure">
+<img src="img/soap/01-DirStruct.png" alt="Directory Structure">
 
 <h1>
 <a name="specl-tutorial-soaphandler-client" class="anchor" href="#specl-tutorial-soaphandler-client"><span class="octicon octicon-link"></span></a>Specl-Tutorial-SOAPHandler-Client</h1>
@@ -741,7 +741,7 @@ Methods are the following, the names are self-explanatory:</p>
 In Eclipse IDE right click on the project <em>Properties</em> &gt; <em>Java Build Path</em> &gt; <em>Libraries</em> &gt; <em>Add JARs...</em> and then select the libraries from your project folder.<br>
 Another way is the following:</p>
 
-<img src="http://rbrunetti.github.io/Specl-Analyser/img/soap/00-ImportLibs.png" alt="Import Libs"><br><em>Import Libraries</em>
+<img src="img/soap/00-ImportLibs.png" alt="Import Libs"><br><em>Import Libraries</em>
 
 <p><a name="example_handler_client_wsclient"></a></p>
 
@@ -1031,7 +1031,7 @@ It intercepts the <code>getBooksNumberPerAuthorResponse</code> (that returns a M
 <a name="bookstorews-client-project-organization" class="anchor" href="#bookstorews-client-project-organization"><span class="octicon octicon-link"></span></a>BookstoreWS Client Project Organization</h3>
 
 <p>Here's the directory structure of the project</p>
-<img src="http://rbrunetti.github.io/Specl-Analyser/img/soap/02-ClientDirStruct.png" alt="Client Directory Structure">
+<img src="img/soap/02-ClientDirStruct.png" alt="Client Directory Structure">
 
 <p><a name="example_handler_sources"></a></p>
 
