Mantainer's Link Corrected

--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ $price &gt;= 2;
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/rbrunetti">rbrunetti</a></p>
+        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/samguinea">samguinea</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
