--- a/soaphandler.html
+++ b/soaphandler.html
@@ -1046,7 +1046,7 @@ Server project (on which this repository is based) is at <a href="https://github
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/rbrunetti">rbrunetti</a></p>
+        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/samguinea">samguinea</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
