--- a/twitterrest.html
+++ b/twitterrest.html
@@ -824,7 +824,7 @@ There's another little thing: the JSON returned by Twitter has some keys with no
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/rbrunetti">rbrunetti</a></p>
+        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/samguinea">samguinea</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
