--- a/bookstore.html
+++ b/bookstore.html
@@ -462,7 +462,7 @@ $first_price + /inventory/book[2]/price &gt; /inventory/book[3]/price;
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/rbrunetti">rbrunetti</a></p>
+        <p class="copyright">Specl - Analyser maintained by <a href="https://github.com/samguinea">samguinea</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
